--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,21 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 
+apply plugin: 'com.android.library'
+apply plugin: 'maven-publish'
+apply plugin: 'maven'
+
+group = 'ir.saverin.kafshdoozak'
+version = '0.0.1-SNAPSHOT'
+
+
 
 buildscript {
     repositories {
         jcenter()
+        maven {
+            url "https://plugins.gradle.org/m2/"
+        }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:1.5.0'
@@ -14,6 +25,8 @@ buildscript {
     }
 }
 
+
+
 allprojects {
     repositories {
         jcenter()
@@ -22,11 +35,6 @@ allprojects {
 
 
 
-
-apply plugin: 'com.android.library'
-
-group = 'ir.saverin'
-version = '0.2.2'
 
 
 android {
@@ -55,3 +63,76 @@ dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:21.0.3'
 }
+
+
+repositories {
+    maven {
+        // change to point to your repo, e.g. http://my.org/repo
+        url "https://oss.sonatype.org/content/repositories/snapshots"
+        name "ossrh"
+    }
+}
+publishing {
+    publications {
+        aar(MavenPublication) {
+            groupId = 'ir.saverin.kafshdoozak'
+            version = '0.0.1-SNAPSHOT'
+            artifactId 'fraimroid'
+
+            // Tell maven to prepare the generated "*.aar" file for publishing
+            artifact("$buildDir/outputs/aar/${project.getName()}-release.aar")
+        }
+    }
+
+
+   /* repositories {
+        maven {
+            // change to point to your repo, e.g. http://my.org/repo
+            url "https://oss.sonatype.org/content/repositories/snapshots"
+            name "ossrh"
+        }
+    }*/
+}
+
+
+uploadArchives {
+    repositories {
+        mavenDeployer {
+            repository(url: "https://oss.sonatype.org/content/repositories/snapshots") {
+                authentication(userName: "kafshdoozaktoons", password: "kafshsaverinhooshmand")
+            }
+            pom.version = "0.0.1-SNAPSHOT"
+            pom.artifactId = "fraimroid"
+            pom.groupId = "ir.saverin.kafshdoozak"
+        }
+    }
+}
+
+
+
+
+task androidJavadocs(type: Javadoc) {
+    source = android.sourceSets.main.java.srcDirs
+}
+
+task androidJavadocsJar(type: Jar) {
+    classifier = 'javadoc'
+    baseName = "fraimroid"
+    from androidJavadocs.destinationDir
+}
+
+task androidSourcesJar(type: Jar) {
+    classifier = 'sources'
+    baseName = "fraimroid"
+    from android.sourceSets.main.java.srcDirs
+}
+
+artifacts {
+//    archives packageReleaseJar
+    archives androidSourcesJar
+    archives androidJavadocsJar
+}
+
+
+
+
